# insurance-credibility-transformer

./: README.md  pyproject.toml  run_databricks_tests.py
notebooks/: 01_credibility_transformer_demo.py
src/insurance_credibility_transformer/: __init__.py  attention.py  datasets.py  decoder.py  explain.py  icl.py  loss.py  retrieval.py  tokenizer.py  trainer.py  transformer.py
tests/: conftest.py  test_attention.py  test_datasets.py  test_icl.py  test_integration.py  test_loss.py  test_retrieval.py  test_tokenizer.py  test_transformer.py
