[project]
name = "insurance-credibility-transformer"
version = "0.1.0"
description = "PyTorch implementation of the Credibility Transformer (arXiv:2409.16653) with ICL extension (arXiv:2509.08122)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ralph", email = "pricing.frontier@gmail.com" }
]
keywords = ["insurance", "credibility", "transformer", "actuarial", "pricing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24",
    "polars>=0.19",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7.4"]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-credibility-transformer"
Repository = "https://github.com/burning-cost/insurance-credibility-transformer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_credibility_transformer"]
